bugfix to org logo styles
added padding to the bottom of .organisation wrapper element to prevent
character descenders being cropped off by the overflow:hidden (which is
needed to self-clear the logos)

--- a/app/assets/stylesheets/frontend/helpers/_organisations.scss
+++ b/app/assets/stylesheets/frontend/helpers/_organisations.scss
@@ -3,6 +3,8 @@
 .organisation {
   overflow: hidden;
   list-style: none;
+  padding-bottom: $gutter-one-third; 
+// stops descenders being cropped off
 }
 
 .organisation-logo-small {
